--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.14",
+    "axios": "^1.2.1",
+    "node-fetch": "^3.3.0",
     "zod": "^3.20.2"
   }
 }
