--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
     "resolveJsonModule": true,
     "baseUrl": "."
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "dist"],
   "include": ["./src/**/*.tsx", "./src/**/*.ts", "src/server.js"]
 }
