--- a/package.json
+++ b/package.json
@@ -2,31 +2,28 @@
   "name": "whatsapp-app",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
+  "type": "commonjs",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "dev": "tsx watch ./src/server.ts",
-    "start": "rimraf ./dist && npx tsc --build && node dist/server.js"
+    "start": "rimraf ./dist && npx tsc --build && node dist/server.js",
+    "start:build": "node --experimental-worker ./src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "cron": "^2.1.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
     "qrcode-terminal": "^0.12.0",
-    "tsx": "^3.12.1",
-    "typescript": "^4.9.4",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
+    "tesseract.js": "^4.0.1",
     "whatsapp-web.js": "^1.18.4"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/cron": "^2.0.0",
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.11.14",
-    "axios": "^1.2.1",
-    "node-fetch": "^3.3.0",
     "zod": "^3.20.2"
   }
 }
