chore: remove zod and validations

--- a/package.json
+++ b/package.json
@@ -23,7 +23,5 @@
     "tesseract.js": "^4.0.1",
     "whatsapp-web.js": "^1.18.4"
   },
-  "devDependencies": {
-    "zod": "^3.20.2"
-  }
+  "devDependencies": {}
 }
