--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   "dependencies": {
     "cron": "^2.1.0",
     "dotenv": "^16.0.3",
+    "googleapis": "^109.0.1",
+    "moment": "^2.29.4",
     "qrcode-terminal": "^0.12.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "tesseract.js": "^4.0.1",
     "whatsapp-web.js": "^1.18.4"
-  },
-  "devDependencies": {}
+  }
 }
