fix: modify build command

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,12 @@ WP_CONTACT=
 ASTRONOMY_APPLICATION_ID=
 ASTRONOMY_APPLICATION_SECRET=
 ASTRONOMY_API_URL=
+
+
+# Google calendar integration
+SCOPES=
+PRIVATE_KEY=
+GOOGLE_CLIENT_EMAIL=
+GOOGLE_PROJECT_NUMBER=
+GOOGLE_CALENDAR_ID=
+GOOGLE_JSON=
