--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "cron": "^2.1.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "googleapis": "^109.0.1",
     "moment": "^2.29.4",
     "qrcode-terminal": "^0.12.0",
