--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "16.x"
   },
   "scripts": {
-    "dev": "tsx watch ./src/server.ts",
+    "dev": "node --experimental-worker ./src/server.ts",
     "start": "rimraf ./dist && npx tsc --build && node dist/server.js",
     "build": "node --experimental-worker ./src/server.js"
   },
