--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "googleapis": "^109.0.1",
     "moment": "^2.29.4",
+    "openai": "^3.1.0",
     "qrcode-terminal": "^0.12.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
