--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.6",
     "cron": "^2.1.0",
     "dotenv": "^16.0.3",
     "googleapis": "^109.0.1",
@@ -24,6 +25,6 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "tesseract.js": "^4.0.1",
-    "whatsapp-web.js": "^1.18.4"
+    "whatsapp-web.js": "^1.19.3"
   }
 }
